# groq-on

./: .gitignore  README.md  app.py  changelog.md  fastapp.py  openai_test.py  parser.py  pyproject.toml  req.py  server_run.py  stream.py  voice_post.md
.github/workflows/: publish-to-pypi.yml
groqon/: __init__.py  cli.py  element_selectors.py  groq.py  groq_config.py  groq_utils.py  logger.py  parsing.py  utils.py
groqon/async_api/: __init__.py  _utils.py  agroq.py  agroq_client.py  agroq_server.py  agroq_utils.py  agroqv2.py  agroqv3 copy.py  agroqv3.py  app.py  schema.py
groqon/async_api/experimental/: __init__.py  mock_api.py  queue_test.ipynb
groqon/fastapi_api/: api.py
groqon/fastapi_api/v1/: chat.py
groqon/fastapi_api/v1/experimental/: transcription.py
groqon/server/: groqon_server.py
groqon/sync_api/: groq.py  groq_utils.py
notebooks/: async_groqon_usage.ipynb  dev stream_testing.ipynb  function call or tool use .ipynb  groq_audio.ipynb  groq_call.ipynb
sample/: model_not_found_error.txt  rate_limit_error.txt  raw_stearmed_response.txt
