[tool.poetry]
name = "groqon"
version = "0.1.93"
description = "Use Groq.com as llm"
authors = ["tikendraw <tikendraksahu1029@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "1.44.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
line-profiler = "^4.1.3"
aiofiles = "^23.2.1"
icecream = "^2.1.3"
termcolor = "^2.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
groqon = 'groqon.async_api.agroq:main'
agroq = 'groqon.async_api.agroq:main'
