[tool.poetry]
name = "groqon"
version = "0.2.01"
description = "Use Groq.com as llm"
authors = ["tikendraw <tikendraksahu1029@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "1.44.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
line-profiler = "^4.1.3"
aiofiles = "^23.2.1"
icecream = "^2.1.3"
termcolor = "^2.4.0"
click = "^8.1.7"
litellm = "^1.41.25"
ollama = "^0.3.0"
groq = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
groqon = 'groqon.cli:one'